high contrast action button for single issue page

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -606,9 +606,11 @@ p
         vertical-align: bottom
         margin: 0
         padding: 0.25em 0.5em
+        color: #000
+        opacity: 0.7
         i.icon
           display: inline-block
-          opacity: 0.3
+          opacity: 0.7
           margin-bottom: 0!important
         .text
           margin-left: 0.5em
@@ -616,6 +618,11 @@ p
           top: -0.1em
       &:after
         display: none
+      a.item:hover
+        background-color: rgba(26,184,243,1)
+      a.item:hover, a.item:hover .icon
+        color: rgba(255,255,255,1)
+        opacity: 1
     .switch 
       float: right
       font-size: 1rem
